--- a/Hackathon/style.css
+++ b/Hackathon/style.css
@@ -1,182 +1,214 @@
 #maintext{
-    text-align: center;
-    font-size: 30px;
+  text-align: center;
+  font-size: 30px;
 }
 
 #header{
-    margin: 100px;
+  margin: 100px;
 }
 
 #password{
-        width: 100%;
-        border: 2px solid rgb(244, 186, 50);
-        padding: 10px;
-        
+      width: 100%;
+      border: 2px solid rgb(244, 186, 50);
+      padding: 10px;
+      
 }
 
 .displayBadge{
-    margin-top: 5%; 
-    display: none; 
-    text-align :center;
+  margin-top: 5%; 
+  display: none; 
+  text-align :center;
 }
 #input{
-    position: absolute;
-    right: 40%;
-    top: 50%;
-    
-}
-
-body{
-    
-  background-color: #ffffff;
+  position: absolute;
+  right: 40%;
+  top: 50%;
   
 }
 
+body{
+  
+background-color: #ffffff;
+background-image:  repeating-radial-gradient(circle at 0 0, transparent 0, #000000 32px), repeating-linear-gradient(#14052f, #14052f);
+background-color: #000000;
+
+}
+
 #image1{
-    width: 150px;
-    float: right;
-    position: absolute;
-    top: 0%;
-    right: 10%;
+  width: 150px;
+  float: right;
+  position: absolute;
+  top: 0%;
+  right: 10%;
 
 }
 
 
 #image2{
-    width: 150px;
-    float: center;
-    top: 0%;
-    left: 10%;
-    position: absolute;
+  width: 150px;
+  float: center;
+  top: 0%;
+  left: 10%;
+  position: absolute;
+
+}
+#lock{
+width: 1200px;
+float: left;
+position: absolute;
+top: 0%;
+left: 15%;
 
 }
 
+.bn62 {
+  color: #1cc49d;
+  background-color: #1b2f31;
+  border-radius: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 2em;
+  width: 6em;
+  font-size: large;
+  font-weight: 600;
+}
+
+
+#next{
+color: red;
+}
+
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+:root {
+    /* --secondary-color: #2f075a;
+    --contrast-color: #BF307F; */
+  background-image:  repeating-radial-gradient(circle at 0 0, transparent 0, #000000 32px), repeating-linear-gradient(#14052f, #14052f);
+  background-color: #000000;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 100%;
+  z-index: -10;
+  background-color: var(--contrast-color);
+}
+
+
+
+.container {
+  display: flex;
+  height: 100vh;
+  justify-content: space-around;
+  align-items: center;
+  color: #fff;
+  animation: expand .8s ease forwards;
+  background-color: var(--secondary-color);
+  position: relative;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  transition: all .8s ease;
+}
+
+.container_content {
+ width: 50%;
+}
+
+.container_content_inner {
+  width: 80%;
+  margin-left: 80px;
+}
+
+.container_outer_img {
+  margin: 50px;
+  width: 50%;
+  overflow: hidden;
+}   
+    
+.container_img {
+  width: 100%;
+  animation: slideIn 1.5s ease-in-out forwards;
+}
+
+.par {
+  height: auto;
+  overflow: hidden;
+}
+
+p{
+  line-height: 28px;
+  transform: translateY(300px);
+  animation: slideUp .8s ease-in-out forwards .8s;
+}
+
+.btns {
+  height: 100%;
+  position: relative;
+  width: 150px;
+  overflow: hidden;
+}
+
+.btns_more {
+  background: transparent;
+  border: 1px solid var(--contrast-color);
+  border-radius: 50px;
+  padding: 8px 12px;
+  color: #BF307F;
+  font-size: 16px;
+  text-transform: uppercase;
+  position: relative;
+  margin-top: 15px;
+  outline: none;
+  transform: translateY(50px);
+  animation: slideUp .8s ease-in-out  forwards 1s;
+}
+
+.title {
+  overflow: hidden;
+  height: auto;
+}
+
+h1 {
+    font-size: 40px;
+    color: var(--contrast-color);
+    margin-bottom: 20px;
+    transform: translateY(100px);
+    animation: slideUp .8s ease forwards .5s;
+}
+
+@keyframes slideIn {
+  0% {
+    transform: translateX(500px) scale(.2);
   }
-  
-  :root {
-    --secondary-color: #151226;
-    --contrast-color: #BF307F;
+  100% {
+    transform: translateX(0px) scale(1);
   }
-  .overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    height: 100%;
-    z-index: -10;
-    background-color: var(--contrast-color);
-  }
-  
-  .container {
-    display: flex;
-    height: 100vh;
-    justify-content: space-around;
-    align-items: center;
-    color: #fff;
-    animation: expand .8s ease forwards;
-    background-color: var(--secondary-color);
-    position: relative;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    transition: all .8s ease;
-  }
-  
-  .container_content {
-   width: 50%;
-  }
-  
-  .container_content_inner {
-    width: 80%;
-    margin-left: 80px;
-  }
-  
-  .container_outer_img {
-    margin: 50px;
-    width: 50%;
-    overflow: hidden;
-  }   
-      
-  .container_img {
-    width: 100%;
-    animation: slideIn 1.5s ease-in-out forwards;
-  }
-  
-  .par {
-    height: auto;
-    overflow: hidden;
-  }
-  
-  p{
-    line-height: 28px;
+}
+
+@keyframes slideUp {
+  0% {
     transform: translateY(300px);
-    animation: slideUp .8s ease-in-out forwards .8s;
   }
-  
-  .btns {
-    height: 100%;
-    position: relative;
-    width: 150px;
-    overflow: hidden;
+  100% {
+    transform: translateY(0px);
   }
-  
-  .btns_more {
-    background: transparent;
-    border: 1px solid var(--contrast-color);
-    border-radius: 50px;
-    padding: 8px 12px;
-    color: #BF307F;
-    font-size: 16px;
-    text-transform: uppercase;
-    position: relative;
-    margin-top: 15px;
-    outline: none;
-    transform: translateY(50px);
-    animation: slideUp .8s ease-in-out  forwards 1s;
+}
+
+@keyframes expand {
+  0% {
+    transform: translateX(1400px);
   }
-  
-  .title {
-    overflow: hidden;
-    height: auto;
+  100% {
+    transform: translateX(0px);
   }
-  
-  h1 {
-      font-size: 40px;
-      color: var(--contrast-color);
-      margin-bottom: 20px;
-      transform: translateY(100px);
-      animation: slideUp .8s ease forwards .5s;
-  }
-  
-  @keyframes slideIn {
-    0% {
-      transform: translateX(500px) scale(.2);
-    }
-    100% {
-      transform: translateX(0px) scale(1);
-    }
-  }
-  
-  @keyframes slideUp {
-    0% {
-      transform: translateY(300px);
-    }
-    100% {
-      transform: translateY(0px);
-    }
-  }
-  
-  @keyframes expand {
-    0% {
-      transform: translateX(1400px);
-    }
-    100% {
-      transform: translateX(0px);
-    }
-  }
+}
   /* Button 6d */
   body .cybr-btn + .cybr-btn {
     margin-top: 2rem;
@@ -353,3 +385,6 @@ body{
   .cybr-btn:nth-of-type(2) {
     --primary-hue: 260;
   }
+  
+
+  
